<resources>
    <string name="app_name">Petagram</string>
    <string name="texto_boton_click">Click</string>
    <string name="texto_titulo">Hello App</string>
    <string name="mensaje">Favorito :)</string>
    <string name="texto_accion">Acción</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="ppunto">5</string>
    <string name="misfavoritos">Mis Favoritos</string>
    <string name="cardtitle">Animal</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="nombre_contacto">Nombre</string>
    <string name="nombre_cuenta_usuario">Escribe tu usuario</string>
    <string name="nombre_conf_cuenta">Petagram</string>
    <string name="menu_conf_cuenta">Configurar Cuenta</string>
    <string name="correo_contacto">Correo</string>
    <string name="mensaje_contacto">Mensaje</string>
    <string name="btn_enviar_mensaje">Enviar Mensaje</string>
    <string name="btn_guardar_cuenta">Guardar Cuenta</string>
    <string name="biografia">Marcos Céspedes - Developer</string>
    <string name="textRank">3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recibirNotificaciones">Recibir Notificaciones</string>
    <string name="btn_obtener_id">Obtener ID Token</string>
    <string name="btn_guardar_cuenta_instagram">Guardar Cuenta Instagram</string>
    <string name="texto_accion_toque">Click para abrir pantalla</string>
</resources>
