<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="py.com.mcespedes.petagram.activity.ContactoActivity">

    <include
        android:id="@+id/miActionBar2"
        layout="@layout/actionbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/miActionBar2"
        >

        <EditText
            android:id="@+id/etNombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_contacto"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/etCorreoContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_contacto"
            android:inputType="text|textEmailAddress"
            />

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textImeMultiLine"
            android:hint="@string/mensaje_contacto"


            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/btn_enviar_mensaje"
            android:onClick="enviarCorreo"


            />

    </LinearLayout>

</RelativeLayout>
