<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configurar_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="py.com.mcespedes.petagram.activity.ConfigurarCuentaActivity">

    <include
        android:id="@+id/miActionBar2"
        layout="@layout/actionbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/miActionBar2"
        >

        <TextView
            android:id="@+id/etNombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_conf_cuenta"
            android:layout_marginTop="30dp"
            android:textSize="40sp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/etNombreCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_cuenta_usuario"
            android:layout_marginTop="15dp"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/btn_guardar_cuenta"
            android:onClick="guardarCuenta"


            />

    </LinearLayout>

</RelativeLayout>
